fix dynamic range and add first hints on page

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <header>    
-        <h1>Guess the number (1 - 100)</h1>
+        <h1>Guess the number (<span id="minSpan">1</span> - <span id="maxSpan">100</span>)</h1>
     </header>
     <div class="container">
+        
+        <h3 style="padding: 3%;">Write the number</h3>
 
         <input type="number" id="inp">
         <button id="btn">CHECK</button>
 
-        <h3>Write the number</h3>
-        <p id="attempts">Number of attempts: <span id="att">3</span></p>
+        <p id="attempts" style="padding: 3%;">Number of attempts: <span id="att">3</span></p>
 
     </div>
     
